[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Humphrey Drummond <hum3@drummond.info>"]
readme = "README.md"
packages = [{include = "fastapi_todo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
